--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,8 +1,8 @@
-@import "frappe.css";
+@import "mocha.css";
 
 * {
-  font-family: FantasqueSansMono Nerd Font;
-  font-size:13px;
+  font-family: JetBrainsMono;
+  font-size:11.7px;
   min-height: 0;
 }
 
