--- a/waybar/style.css
+++ b/waybar/style.css
@@ -9,30 +9,29 @@
 #waybar {
   background: transparent;
   color: @text;
-  margin: 5px 5px;
+  margin: 4px 5px;
 }
 
 #workspaces {
-  border-radius: 1rem;
+  border-radius: 0.6rem;
   margin: 5px;
-  background-color: @surface0;
-  margin-left: 1rem;
+  background-color: @base;
+  margin-left: 0.6rem;
 }
 
 #workspaces button {
-  color: @lavender;
+  color: @text;
   border-radius: 1rem;
   padding: 0.4rem;
-/*  padding: 0.25rem;*/
 }
 
 #workspaces button.active {
-  color: @sky;
+  color: @overlay1;
   border-radius: 1rem;
 }
 
 #workspaces button:hover {
-  color: @sapphire;
+  color: @overlay0;
   border-radius: 1rem;
 }
 
@@ -45,26 +44,30 @@
 #clock,
 #battery,
 #idle_inhibitor,
+#bluetooth,
 #pulseaudio {
-  background-color: @surface0;
-  padding: 0.5rem 1rem;
-/*  padding: 0.25rem 0.5rem;*/
+  background-color: @base;
+  padding: 0.375rem 0.75rem;
   margin: 5px 0;
+}
+
+#bluetooth {
+  color: @blue;
 }
 
 #clock {
   color: @text;
-  border-radius: 0px 1rem 1rem 0px;
+  border-radius: 0px 0.6rem 0.6rem 0px;
   margin-right: 1rem;
 }
 
 #cpu {
-  border-radius: 1rem 0px 0px 1rem;
+  border-radius: 0.6rem 0px 0px 0.6rem;
   color: @peach;
 }
 
 #memory {
-  border-radius: 0px 1rem 1rem 0px;
+  border-radius: 0px 0.6rem 0.6rem 0px;
 }
 
 #battery {
@@ -89,7 +92,7 @@
 
 #pulseaudio {
   color: @maroon;
-  border-radius: 1rem 0px 0px 1rem;
+  border-radius: 0.6rem 0px 0px 0.6rem;
   margin-left: 1rem;
 }
 
@@ -100,8 +103,8 @@
 }
 
 #tray {
-  margin-right: 1rem;
-  border-radius: 1rem;
+  margin-right: 0.6rem;
+  border-radius: 0.6rem;
 }
 
 #temperature {
